--- a/src/app/components/pages/home/home.component.html
+++ b/src/app/components/pages/home/home.component.html
@@ -1,5 +1,8 @@
 <div class="home-container">
-    <app-relevante></app-relevante>
+    <!-- <div class="fondo"> -->
+        <app-relevante></app-relevante>
+    <!-- </div> -->
+    
     <div class="container">
         <app-oferta></app-oferta>
     </div>
