--- a/src/app/components/pages/main-carousel/main-carousel.component.html
+++ b/src/app/components/pages/main-carousel/main-carousel.component.html
@@ -1,4 +1,5 @@
-<div class="dsc-carousel" [ngStyle]="{'min-height': finalHeight}">
+<!-- <div class="dsc-carousel cont-height" [ngStyle]="{'min-height': finalHeight}"> -->
+<div class="dsc-carousel cont-height">
   <div class="dsc-carousel__btns">
     <i class="fa fa-chevron-circle-left" (click)="setPrev()"></i>
     <i class="fa fa-chevron-circle-right" (click)="setNext()"></i>
