--- a/src/app/shared/components/header/header.component.css
+++ b/src/app/shared/components/header/header.component.css
@@ -28,14 +28,23 @@ b{
     font-size: 26px;
   }
 @media (min-width: 350px) and (max-width: 710px) {
+  .header{
+    height: 42px;
+  }
 	h1 {
         margin-top: 0px;
         text-align: center;
-        font-size: 20px;
+        font-size: 13px;
+      }
+      b{
+        font-size: 18px;
       }
 }
 
 @media (min-width: 710px) and (max-width: 1025px) {
+  .header{
+    height: 65px;
+  }
 	h1 {
         margin-top: 5px;
         text-align: center;
