--- a/src/app/shared/components/header/header.component.css
+++ b/src/app/shared/components/header/header.component.css
@@ -27,7 +27,20 @@ h1 {
 b{
     font-size: 26px;
   }
-@media (min-width: 350px) and (max-width: 710px) {
+  @media (min-width: 350px) and (max-width: 410px) {
+    .header{
+      height: 40px;
+    }
+    h1 {
+          margin-top: 0px;
+          text-align: center;
+          font-size: 11px;
+        }
+        b{
+          font-size: 16px;
+        }
+  }
+@media (min-width: 410px) and (max-width: 710px) {
   .header{
     height: 42px;
   }
