Add about-us.component and update the photos

--- a/src/app/components/pages/about-us/about-us.component.html
+++ b/src/app/components/pages/about-us/about-us.component.html
@@ -1,1 +1,12 @@
-<p>about-us works!</p>
+<div class="main">
+    <div >
+        <h1>QUIENES SOMOS?</h1>
+    </div>
+    <div >
+        <P>Somos un equipo de soñadores, aventureros y apasionados por descubrir el mundo de una manera única y emocionante. Con más de 5 años de trayectoria, hemos querido compartir nuestras experiencias y ayudar a otros a hacer realidad los sueños, creando oportunidades para que las personas puedan estudiar a costos muy bajos, viviendo experiencias únicas y aprendiendo de otras culturas.</P>
+    </div>
+    <div>
+       <!-- <img src="assets\Estudiantes\photo_2022-11-04_14-41-12(1).jpg" alt=""> -->
+       <img src="https://images.pexels.com/photos/1595385/pexels-photo-1595385.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="">
+    </div>
+</div>
