--- a/src/app/components/pages/home/home.component.html
+++ b/src/app/components/pages/home/home.component.html
@@ -10,6 +10,10 @@
     <div class="center">
         <app-main-btn></app-main-btn>
     </div>
+    <div class="container">
+        <app-about-us></app-about-us>
+    </div>
+    
     <div class="circle"></div>
 
     <div class="fondo center">
