--- a/src/app/components/pages/home/home.component.html
+++ b/src/app/components/pages/home/home.component.html
@@ -12,6 +12,7 @@
     </div>
     <div class="container">
         <app-about-us></app-about-us>
+        <app-our-mission></app-our-mission>
     </div>
     
     <div class="circle"></div>
