--- a/src/app/components/pages/about-us/about-us.component.css
+++ b/src/app/components/pages/about-us/about-us.component.css
@@ -1,10 +1,10 @@
 .main{
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
-    padding: 15px;
+    padding: 20px;
     gap: 10px;
     align-items: center;
-    justify-items: stretch;
+    /* justify-items: stretch; */
 
     h1{
         font-weight: bold;
@@ -17,9 +17,10 @@
 }
 @media (min-width: 650px) and (max-width: 1100px){
     .main{
+        /* grid-template-columns: 1fr; */
         p{
-            font-size: 20px;
-            font-weight: 450;
+            font-size: 18px;
+            font-weight: 550;
          }
       }
 }
@@ -27,22 +28,21 @@
     .main{
         grid-template-columns: 1fr;
         h1{
-            font-size: 20px;
+            font-size: 22px;
           }
         p{
-            font-size: 12px;
-            font-weight: 450;
+            font-size: 14px;
+            font-weight: 550;
          }
       }
     .main div:first-child{
-        align-items: center;
+        /* border-right: 2px solid var(--secondary-color); */
         grid-column: 1/2;
-        grid-row: 1/4;
+        grid-row: 1/3;
     }
     .main div:nth-child(2){
         grid-column: 2/-1;
         grid-row: 1/2;
-        
         }
     .main div:nth-child(3){
     grid-column: 2/-1;
@@ -57,7 +57,7 @@
 grid-column: 2/-1;
 }
 .main img{
-    border-radius: 15px;
+    border-radius: 10px;
     width: 100%;
     height: auto;
 }
